--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "@sveltejs/vite-plugin-svelte": "^6.0.0",
     "@tailwindcss/typography": "^0.5.15",
     "@tailwindcss/vite": "^4.0.0",
+    "lorem-ipsum": "^2.0.8",
     "publint": "^0.3.2",
     "svelte": "^5.0.0",
     "svelte-check": "^4.0.0",
